Added schedule pages

--- a/day8.html
+++ b/day8.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Schedule VT18</title>
+<title>Dag 8: Grundläggande SQL</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,102 +202,24 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Schedule VT18</h1>
+<h1 class="title toc-ignore">Dag 8: Grundläggande SQL</h1>
 
 </div>
 
+<div id="TOC">
+<ul>
+<li><a href="#gor-detta-innan-lektion">Gör detta innan lektion</a></li>
+<li><a href="#under-lektion">Under lektion</a></li>
+</ul>
+</div>
 
-<table>
-<thead>
-<tr class="header">
-<th align="left">Day</th>
-<th align="left">Time</th>
-<th align="left">Topic</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">måndag, 2018-01-15</td>
-<td align="left">09:15-12:00</td>
-<td align="left"><a href="day1.html">Introduction. Software, GitHub and Markdown.</a> <a href="https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide1.html#1">[Slides]</a></td>
-</tr>
-<tr class="even">
-<td align="left">onsdag, 2018-01-17</td>
-<td align="left">09:15-12:00</td>
-<td align="left"><a href="day2.html">Tidyverse: Basic dplyr and ggplot2.</a> <a href="https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide2.html#1">[Slides]</a></td>
-</tr>
-<tr class="odd">
-<td align="left">torsdag, 2018-01-18</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day3.html">Tidyverse: group_by and summarise, more ggplot2.</a></td>
-</tr>
-<tr class="even">
-<td align="left">måndag, 2018-01-22</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day4.html">Exploratory data analysis</a></td>
-</tr>
-<tr class="odd">
-<td align="left">torsdag, 2018-01-25</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day5.html">Cleaning data: Tidy data. Long to wide and back.</a></td>
-</tr>
-<tr class="even">
-<td align="left">måndag, 2018-01-29</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day6.html">Relational data: Combining tables with dplyr joins.</a></td>
-</tr>
-<tr class="odd">
-<td align="left">onsdag, 2018-01-31</td>
-<td align="left">09:15-12:00</td>
-<td align="left"><a href="day7.html">Exploring high-dimensional data: Principal components and clustering</a></td>
-</tr>
-<tr class="even">
-<td align="left">torsdag, 2018-02-01</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day8.html">Relational data: SQL basics</a>. <strong>Guest lecture: Sebastian Tengborg from <a href="https://king.com/sv">King</a></strong></td>
-</tr>
-<tr class="odd">
-<td align="left">måndag, 2018-02-05</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day9.html">Text data: Regular expressions.</a></td>
-</tr>
-<tr class="even">
-<td align="left">torsdag, 2018-02-08</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day10.html">Using APIs: httr, JSON and XML.</a></td>
-</tr>
-<tr class="odd">
-<td align="left">måndag, 2018-02-12</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day11.html">Web-scraping: Basic rvest.</a></td>
-</tr>
-<tr class="even">
-<td align="left">torsdag, 2018-02-15</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day12.html">R Programming: Programming with functions.</a></td>
-</tr>
-<tr class="odd">
-<td align="left">måndag, 2018-02-19</td>
-<td align="left">12:45-15:30</td>
-<td align="left"><a href="day13.html">R Programming: Functional programming with purrr.</a> <strong>Guest lecture: Mehrdad Mamaghani from <a href="https://primegroup.com/article/insight-mapping-usa-on-facebook-the-case-for-macro-targeting/">Prime</a></strong></td>
-</tr>
-<tr class="even">
-<td align="left">torsdag, 2018-02-22</td>
-<td align="left">12:45-15:30</td>
-<td align="left">Presenting: Principles of visualisation.</td>
-</tr>
-<tr class="odd">
-<td align="left">tisdag, 2018-02-27</td>
-<td align="left">13:00-17:00</td>
-<td align="left">Exam.</td>
-</tr>
-<tr class="even">
-<td align="left">måndag, 2018-03-12</td>
-<td align="left">12:45-16:00</td>
-<td align="left">Project presentation.</td>
-</tr>
-</tbody>
-</table>
+<div id="gor-detta-innan-lektion" class="section level2">
+<h2>Gör detta innan lektion</h2>
+<p>Gå igenom <em>Intro to SQL for Data Science</em> på <a href="https://www.datacamp.com/groups/statistisk-databehandling-vt18">DataCamp</a>.</p>
+</div>
+<div id="under-lektion" class="section level2">
+<h2>Under lektion</h2>
+</div>
 
 
 
