--- a/HW4.html
+++ b/HW4.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Individuella hemuppgifter (3 hp, betyg G/U.)</title>
+<title>HW4: Austen vs Rowling</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,47 +202,54 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Individuella hemuppgifter (3 hp, betyg G/U.)</h1>
+<h1 class="title toc-ignore">HW4: Austen vs Rowling</h1>
 
 </div>
 
 
-<p>Kursen innehåller sex hemupgifter vars lösningar skall laddas upp på GitHub innan 24:00 vid angiven deadline. Hemuppgifterna skall lösas självständigt.</p>
-<p>Det ingår även att göra en kamratgranskning av en annan students lösning, betygssättning utförs dock av läraren.</p>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Homework</th>
-<th align="left">Deadline</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><a href="HW1.html">HW1: GitHub test-run</a></td>
-<td align="left">2018-01-21</td>
-</tr>
-<tr class="even">
-<td align="left"><a href="HW2.html">HW2: Grundläggande tidyverse</a></td>
-<td align="left">2018-01-28</td>
-</tr>
-<tr class="odd">
-<td align="left"><a href="HW3.html">HW3: Tabellhantering</a></td>
-<td align="left">2018-02-04</td>
-</tr>
-<tr class="even">
-<td align="left"><a href="HW4.html">HW4: Austen vs Rowling</a></td>
-<td align="left">2018-02-11</td>
-</tr>
-<tr class="odd">
-<td align="left">HW5</td>
-<td align="left">2018-02-18</td>
-</tr>
-<tr class="even">
-<td align="left">HW6</td>
-<td align="left">2018-02-25</td>
-</tr>
-</tbody>
-</table>
+<p>Paketen <a href="https://cran.r-project.org/web/packages/janeaustenr/index.html"><code>janeaustenr</code></a> och <a href="https://github.com/bradleyboehmke/harrypotter"><code>harrypotter</code></a> (det senare installeras från GitHub) innehåller Jane Austens verk och J.K. Rowlings Harry Potter böcker. Följande kod städar upp och kombinerar böckerna i en gemensam <code>data.frame</code> kallad <code>tidy_books</code>.</p>
+<pre class="r"><code>library(tidyverse)
+library(harrypotter)
+library(janeaustenr)
+library(purrr)
+library(stringr)
+
+book_list &lt;- list(
+    list(text = sensesensibility, title = &quot;Sense and Sensibility&quot;, author = &quot;Austen&quot;),
+    list(text = prideprejudice, title = &quot;Pride and Prejudice&quot;, author = &quot;Austen&quot;),
+    list(text = mansfieldpark, title = &quot;Mansfield Park&quot;, author = &quot;Austen&quot;),
+    list(text = emma, title = &quot;Emma&quot;, author = &quot;Austen&quot;),    
+    list(text = northangerabbey, title = &quot;Northanger Abbey&quot;, author = &quot;Austen&quot;), 
+    list(text = persuasion, title = &quot;Persuasion&quot;, author = &quot;Austen&quot;),
+    list(text = philosophers_stone, title = &quot;Philosophers Stone&quot;, author = &quot;Rowling&quot;),
+    list(text = chamber_of_secrets, title = &quot;Chamber of Secrets&quot;, author = &quot;Rowling&quot;),
+    list(text = prisoner_of_azkaban, title = &quot;Prisoner of Azkaban&quot;, author = &quot;Rowling&quot;),
+    list(text = goblet_of_fire, title = &quot;Goblet of Fire&quot;, author = &quot;Rowling&quot;),
+    list(text = order_of_the_phoenix, title = &quot;Order of the Phoenix&quot;, author = &quot;Rowling&quot;),
+    list(text = half_blood_prince, title = &quot;Half-Blood Prince&quot;, author = &quot;Rowling&quot;), 
+    list(text = deathly_hallows, title = &quot;Deathly Hallows&quot;, author = &quot;Rowling&quot;)
+)
+
+tidy_book &lt;- function(book){
+    # Attempts to convert a character vector to a vector of lower case words
+    words &lt;- tolower(book$text) %&gt;% 
+        str_extract_all(boundary(&quot;word&quot;)) %&gt;% 
+        unlist()
+    data.frame(words = words, title = book$title, author = book$author, 
+               stringsAsFactors = FALSE)
+}
+
+# Mer om map-funktionerna i slutet av kursen!
+tidy_books &lt;- map(book_list, tidy_book) %&gt;% 
+    map_df(bind_rows)</code></pre>
+<p>Kontrollera ifall några ord innehåller tecken som inte är gemena bokstäver (a-z), ta i så fall bort dessa. Ifall vi vill avgöra om Austen eller Rowlings skrivet en given bok, kan vi helt enkelt undersöka hur ofta “harry” förekommer. Gör en tabell över antalet förekomster av “harry” i böckerna.</p>
+<p>För att avgöra om författarna skiljer sig i stil kommer vi istället använda frekvensen av ett antal stoppord (ord var huvudsakliga syfte är att binda ihop texten). En stoppordlista hittar vi med</p>
+<pre class="r"><code>stop_words &lt;- read_table(&quot;https://raw.githubusercontent.com/stopwords-iso/stopwords-en/master/stopwords-en.txt&quot;,
+                       col_names = &quot;words&quot;)</code></pre>
+<p>Rensa även denna från apostrofer och dylikt innan den kopplas ihop med böckerna genom en <code>inner_join</code>. Välj nu ut de 20 mest frekventa stopporden (i de samlade verken) och skapa med hjälp av <code>spread</code> en <code>data.frame</code> med kolumnerna <code>title</code>, <code>author</code> samt en kolumn för vart och ett av stopporden innehållande deras relativa frekvenser i respektive verk (d.v.s. en <code>data.frame</code> med 13 rader och 22 kolumner).</p>
+<p>Bilda en matris (13 rader och 20 kolumner) med standardiserade ordfrekvenser (dra ifrån <code>mean</code> och dela med <code>sd</code>) och gör en singulärvärdesuppdelning (SVD) med <code>svd</code>. Plotta de två första kolumnerna i matrisen <span class="math inline">\(U\)</span> mot varandra och färglägg efter författare.</p>
+<p>Gör även en klustring av böckerna med hierarkis klusteranalys (<code>hclust</code>, valfria parametrar). Plotta ett dendrogram och bestäm resultatet av en klustering i två komponenter.</p>
+<p>Bonusuppgift: Använd paketet <code>babynames</code> för att uppskatta andelen amerikanska Potter-fans som förväxlat namnen “Hermione” och “Hermoine”.</p>
 
 
 
