--- a/day10.html
+++ b/day10.html
@@ -216,6 +216,12 @@ $(document).ready(function () {
 <div id="gor-detta-innan-lektion" class="section level2">
 <h2>Gör detta innan lektion</h2>
 <p>Lös kapitlen <em>Downloading Files and Using API Clients</em>, <em>Using httr to interact with APIs directly</em> och <em>Handling JSON and XML</em> på <a href="https://www.datacamp.com/groups/statistisk-databehandling-vt18">DataCamp</a>.</p>
+<p>Läs: Kapitel 1-3 i <a href="https://zapier.com/learn/apis/">An introduction to APIs</a></p>
+<p>Resurser:</p>
+<ul>
+<li><a href="https://www.programmableweb.com/">ProgrammableWeb</a> innehåller en omfattande katalog över öppna APIer.</li>
+<li><a href="https://oppnadata.se/">Öppna data och PSI</a> innehåller en katalog över resurser från svenska myndigheter.</li>
+</ul>
 </div>
 <div id="under-lektion" class="section level2">
 <h2>Under lektion</h2>
