--- a/day10.html
+++ b/day10.html
@@ -217,6 +217,7 @@ $(document).ready(function () {
 <li><a href="#a-pi">a-pi</a></li>
 <li><a href="#timeedit">TimeEdit</a></li>
 <li><a href="#scb">SCB</a></li>
+<li><a href="#senaste-dygnet-pa-bromma">Senaste dygnet på Bromma</a></li>
 <li><a href="#systembolag">Systembolag</a></li>
 </ul></li>
 </ul>
@@ -255,8 +256,8 @@ library(tidyverse)
 library(jsonlite)
 library(listviewer)
 jsonedit(schema_json)</code></pre>
-<div id="htmlwidget-e299a371028449969486" style="width:672px;height:480px;" class="jsonedit html-widget"></div>
-<script type="application/json" data-for="htmlwidget-e299a371028449969486">{"x":{"data":"{\"columnheaders\":[\"Kurs\",\"Kurstillfälle\",\"Lokal\",\"Byggnad\",\"Lärare\",\"Delkurs\",\"Moment\",\"Undervisningstyp\",\"Studentgrupp\",\"Information\",\"Litteraturinfo\"],\"info\":{\"reservationlimit\":200,\"reservationcount\":16},\"reservations\":[{\"id\":\"983352\",\"startdate\":\"2018-01-15\",\"starttime\":\"09:15\",\"enddate\":\"2018-01-15\",\"endtime\":\"12:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"986362\",\"startdate\":\"2018-01-17\",\"starttime\":\"09:15\",\"enddate\":\"2018-01-17\",\"endtime\":\"12:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983353\",\"startdate\":\"2018-01-18\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-18\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983355\",\"startdate\":\"2018-01-22\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-22\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983356\",\"startdate\":\"2018-01-25\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-25\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983368\",\"startdate\":\"2018-01-29\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-29\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"986651\",\"startdate\":\"2018-01-31\",\"starttime\":\"09:15\",\"enddate\":\"2018-01-31\",\"endtime\":\"12:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983369\",\"startdate\":\"2018-02-01\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-01\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983370\",\"startdate\":\"2018-02-05\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-05\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983372\",\"startdate\":\"2018-02-08\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-08\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983374\",\"startdate\":\"2018-02-12\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-12\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983375\",\"startdate\":\"2018-02-15\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-15\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983376\",\"startdate\":\"2018-02-19\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-19\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983377\",\"startdate\":\"2018-02-22\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-22\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"993184\",\"startdate\":\"2018-02-27\",\"starttime\":\"13:00\",\"enddate\":\"2018-02-27\",\"endtime\":\"17:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 36\",\"Kräftriket hus 5\",\"Martin Sköld\",\"\",\"\",\"Tentamen\",\"\",\"\",\"\"]},{\"id\":\"993188\",\"startdate\":\"2018-03-12\",\"starttime\":\"12:45\",\"enddate\":\"2018-03-12\",\"endtime\":\"16:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"Obligatorisk närvaro, Redovisning\",\"\",\"\",\"\"]}]}","options":{"mode":"tree","modes":["code","form","text","tree","view"]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-0e45368fd1e1e49c5fcd" style="width:672px;height:480px;" class="jsonedit html-widget"></div>
+<script type="application/json" data-for="htmlwidget-0e45368fd1e1e49c5fcd">{"x":{"data":"{\"columnheaders\":[\"Kurs\",\"Kurstillfälle\",\"Lokal\",\"Byggnad\",\"Lärare\",\"Delkurs\",\"Moment\",\"Undervisningstyp\",\"Studentgrupp\",\"Information\",\"Litteraturinfo\"],\"info\":{\"reservationlimit\":200,\"reservationcount\":16},\"reservations\":[{\"id\":\"983352\",\"startdate\":\"2018-01-15\",\"starttime\":\"09:15\",\"enddate\":\"2018-01-15\",\"endtime\":\"12:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"986362\",\"startdate\":\"2018-01-17\",\"starttime\":\"09:15\",\"enddate\":\"2018-01-17\",\"endtime\":\"12:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983353\",\"startdate\":\"2018-01-18\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-18\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983355\",\"startdate\":\"2018-01-22\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-22\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983356\",\"startdate\":\"2018-01-25\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-25\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983368\",\"startdate\":\"2018-01-29\",\"starttime\":\"12:45\",\"enddate\":\"2018-01-29\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"986651\",\"startdate\":\"2018-01-31\",\"starttime\":\"09:15\",\"enddate\":\"2018-01-31\",\"endtime\":\"12:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983369\",\"startdate\":\"2018-02-01\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-01\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983370\",\"startdate\":\"2018-02-05\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-05\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983372\",\"startdate\":\"2018-02-08\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-08\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983374\",\"startdate\":\"2018-02-12\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-12\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983375\",\"startdate\":\"2018-02-15\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-15\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983376\",\"startdate\":\"2018-02-19\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-19\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"983377\",\"startdate\":\"2018-02-22\",\"starttime\":\"12:45\",\"enddate\":\"2018-02-22\",\"endtime\":\"15:30\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"\",\"\",\"\",\"\"]},{\"id\":\"993184\",\"startdate\":\"2018-02-27\",\"starttime\":\"13:00\",\"enddate\":\"2018-02-27\",\"endtime\":\"17:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 36\",\"Kräftriket hus 5\",\"Martin Sköld\",\"\",\"\",\"Tentamen\",\"\",\"\",\"\"]},{\"id\":\"993188\",\"startdate\":\"2018-03-12\",\"starttime\":\"12:45\",\"enddate\":\"2018-03-12\",\"endtime\":\"16:00\",\"columns\":[\"MT5013\",\"48072,VT18,v:1803/1811,50% DAG,NML\",\"Sal 32\",\"Kräftriket hus 5\",\"Benjamin Allévius, Martin Sköld\",\"\",\"\",\"Obligatorisk närvaro, Redovisning\",\"\",\"\",\"\"]}]}","options":{"mode":"tree","modes":["code","form","text","tree","view"]}},"evals":[],"jsHooks":[]}</script>
 <p>Vi konverterar med <code>fromJSON</code> och plockar ut <code>reservations</code></p>
 <pre class="r"><code>schema_df &lt;- fromJSON(schema_json)$reservations</code></pre>
 <p>Resultatet är en <code>data.frame</code> med sex kolumner, där den sista kolumnen innehåller en vektor i varje cell. För att få ut element ur denna kolumn använder vi <code>mutate</code> i kombination <code>map_chr</code>. Familjen av <code>map</code>-funktioner kommer vi prata mer om i slutet av kursen, i detta fall motsvaras <code>map_chr(columns, 1)</code> av <code>sapply(columns, function (x) x[1])</code> i bas-R.</p>
@@ -375,11 +376,56 @@ jsonedit(schema_json)</code></pre>
 </table>
 <p>Bokningarna för sal 14 under vårterminen hittar du på</p>
 <p><a href="https://se.timeedit.net/web/su/db1/stud1/ri157345X69Z07Q5Z76g0Y30y0076Y31Q09gQY5Q55777.html" class="uri">https://se.timeedit.net/web/su/db1/stud1/ri157345X69Z07Q5Z76g0Y30y0076Y31Q09gQY5Q55777.html</a></p>
-<p>vilken lärare är mest schemalagd i lokalen?</p>
+<ul>
+<li>vilken lärare är mest schemalagd i sal 14?</li>
+</ul>
 </div>
 <div id="scb" class="section level3">
 <h3>SCB</h3>
 <p>Om du genererat en tabell i <a href="http://www.statistikdatabasen.scb.se/">Statistikdatabasen</a> hittar du längst ned en länk “API för denna tabell” som ger en url och en fråga som skall ställas med POST för att hämta tabellen. Prova hämta en tabell med <code>httr::POST</code>, frågan skall anges i funktionens <code>body</code>-parameter. Tips: längst ned i frågan kan du byta <code>&quot;format&quot;: &quot;px&quot;</code> mot <code>&quot;format&quot;: &quot;json&quot;</code> för att få svaret i JSON-format. Hämta en tabell, undersök strukturen och försök plocka ut en lämplig <code>data.frame</code>.</p>
+</div>
+<div id="senaste-dygnet-pa-bromma" class="section level3">
+<h3>Senaste dygnet på Bromma</h3>
+<p>Senaste dygnets timvisa temperaturobservationer (parameter 1) på Bromma (station 97200) kan hämtas från SMHI med (byt <code>xml</code> mot <code>json</code> för att ändra format)</p>
+<pre class="r"><code>temp_response &lt;- GET(&quot;https://opendata-download-metobs.smhi.se/api/version/1.0/parameter/1/station/97200/period/latest-day/data.xml&quot;)
+http_type(temp_response)</code></pre>
+<pre><code>## [1] &quot;application/xml&quot;</code></pre>
+<p>Vi konverterar till XML-format med</p>
+<pre class="r"><code>library(xml2)
+temp_xml &lt;- read_xml(temp_response)
+class(temp_xml)</code></pre>
+<pre><code>## [1] &quot;xml_document&quot; &quot;xml_node&quot;</code></pre>
+<p>Strukturen ser man enklast genom att öppna</p>
+<p><a href="https://opendata-download-metobs.smhi.se/api/version/1.0/parameter/1/station/97200/period/latest-day/data.xml" class="uri">https://opendata-download-metobs.smhi.se/api/version/1.0/parameter/1/station/97200/period/latest-day/data.xml</a></p>
+<p>i web-browsern. Vi ser att temperaturerna ligger i <code>XPATH</code> <code>&quot;/metObsSampleData/value/value&quot;</code>:</p>
+<pre class="r"><code>xml_ns_strip(temp_xml) # Överkurs
+xml_find_all(temp_xml, &quot;/metObsSampleData/value/value&quot;)</code></pre>
+<pre><code>## {xml_nodeset (25)}
+##  [1] &lt;value&gt;-6.8&lt;/value&gt;
+##  [2] &lt;value&gt;-6.4&lt;/value&gt;
+##  [3] &lt;value&gt;-5.8&lt;/value&gt;
+##  [4] &lt;value&gt;-5.0&lt;/value&gt;
+##  [5] &lt;value&gt;-4.5&lt;/value&gt;
+##  [6] &lt;value&gt;-4.0&lt;/value&gt;
+##  [7] &lt;value&gt;-3.4&lt;/value&gt;
+##  [8] &lt;value&gt;-3.2&lt;/value&gt;
+##  [9] &lt;value&gt;-3.0&lt;/value&gt;
+## [10] &lt;value&gt;-3.2&lt;/value&gt;
+## [11] &lt;value&gt;-3.1&lt;/value&gt;
+## [12] &lt;value&gt;-3.0&lt;/value&gt;
+## [13] &lt;value&gt;-2.8&lt;/value&gt;
+## [14] &lt;value&gt;-4.8&lt;/value&gt;
+## [15] &lt;value&gt;-5.4&lt;/value&gt;
+## [16] &lt;value&gt;-8.1&lt;/value&gt;
+## [17] &lt;value&gt;-7.6&lt;/value&gt;
+## [18] &lt;value&gt;-5.7&lt;/value&gt;
+## [19] &lt;value&gt;-6.5&lt;/value&gt;
+## [20] &lt;value&gt;-5.1&lt;/value&gt;
+## ...</code></pre>
+<ul>
+<li>Ta även fram tidpunkterna.</li>
+<li>Välj ut och ta fram någon annan parameter/station (se <a href="https://opendata-download-metobs.smhi.se/explore/#">SMHI</a>). Prova även JSON-formatet.</li>
+</ul>
 </div>
 <div id="systembolag" class="section level3">
 <h3>Systembolag</h3>
@@ -388,8 +434,7 @@ jsonedit(schema_json)</code></pre>
 http_type(butiker_response)</code></pre>
 <pre><code>## [1] &quot;application/xml&quot;</code></pre>
 <p>Vi konverterar till XML-fomat med</p>
-<pre class="r"><code>library(xml2)
-butiker_xml &lt;- read_xml(butiker_response)</code></pre>
+<pre class="r"><code>butiker_xml &lt;- read_xml(butiker_response)</code></pre>
 <p>och tittar på första butiken med</p>
 <pre class="r"><code>xml_find_first(butiker_xml, &quot;/ButikerOmbud/ButikOmbud&quot;)</code></pre>
 <pre><code>## {xml_node}
@@ -406,7 +451,7 @@ butiker_xml &lt;- read_xml(butiker_response)</code></pre>
 ## [10] &lt;ButiksTyp/&gt;
 ## [11] &lt;Tjanster/&gt;
 ## [12] &lt;SokOrd&gt;STOCKHOLM;STHLM;ÖSTERMALM;KARLAPLANSRONDELLEN;FÄLTAN&lt;/SokOrd&gt;
-## [13] &lt;Oppettider&gt;2018-02-07;10:00;19:00;;;0;_*2018-02-08;10:00;19:00;;;0 ...
+## [13] &lt;Oppettider&gt;2018-02-08;10:00;19:00;;;0;_*2018-02-09;10:00;19:00;;;0 ...
 ## [14] &lt;RT90x&gt;6582011&lt;/RT90x&gt;
 ## [15] &lt;RT90y&gt;1630064&lt;/RT90y&gt;</code></pre>
 <p>För att få ut t.ex. butiksnamnen använder vi nu</p>
@@ -422,7 +467,10 @@ butiker_xml &lt;- read_xml(butiker_response)</code></pre>
 ##  [8] &lt;Namn&gt;Marieberg&lt;/Namn&gt;
 ##  [9] &lt;Namn/&gt;
 ## [10] &lt;Namn/&gt;</code></pre>
-<p>uppenbarligen har inte alla butiker ett namn. Hur många butiker finns i respektive län?</p>
+<p>uppenbarligen har inte alla butiker ett namn.</p>
+<ul>
+<li>Hur många butiker finns i respektive län?</li>
+</ul>
 </div>
 </div>
 
