--- a/exam.html
+++ b/exam.html
@@ -212,8 +212,10 @@ $(document).ready(function () {
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf">R Markdown Cheat Sheet</a></li>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf">Data Visualization Cheat Sheet</a></li>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf">Data Transformation Cheat Sheet</a></li>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-import.pdf">Data Import Cheat Sheet</a></li>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/strings.pdf">Working with Strings Cheat Sheet</a></li>
 </ul>
-<p>som delas ut i samband med tentamen.</p>
+<p>som delas ut i samband med tentamen. Utöver dessa kommer även ett SQL Cheat Sheet delas ut.</p>
 
 
 
