--- a/exam.html
+++ b/exam.html
@@ -207,7 +207,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen <strong>2018-02-27</strong>. Denna examinerar grundläggande färdighet i att använda kursens verktyg med flervalsfrågor samt problemlösning i RStudio-miljö. Tillåtna hjälpmedel kommer inkludera</p>
+<p>En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen <strong>2018-02-27</strong>. Denna examinerar grundläggande färdighet i att använda kursens verktyg med flervalsfrågor samt problemlösning i RStudio-miljö, utan tillgång till internet. Tillåtna hjälpmedel kommer inkludera</p>
 <ul>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf">R Markdown Cheat Sheet</a></li>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf">Data Visualization Cheat Sheet</a></li>
@@ -216,6 +216,7 @@ $(document).ready(function () {
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/strings.pdf">Working with Strings Cheat Sheet</a></li>
 </ul>
 <p>som delas ut i samband med tentamen. Utöver dessa kommer även ett SQL Cheat Sheet delas ut.</p>
+<p>Följande R-paket kommer vara tillgängliga: <code>tidyverse</code> (t.ex. <code>dplyr</code>, <code>tidyr</code>, <code>readr</code>, <code>tidyr</code>, <code>stringr</code>), <code>rmarkdown</code>, <code>knitr</code>, <code>DBI</code>, <code>rsqlite</code>, <code>rebus</code>, <code>jsonlite</code>, <code>listviewer</code>, <code>xml2</code>.</p>
 
 
 
