Fixed broken link to slide7

--- a/schedule.html
+++ b/schedule.html
@@ -249,7 +249,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left">onsdag, 2018-01-31</td>
 <td align="left">09:15-12:00</td>
-<td align="left"><a href="day7.html">Exploring high-dimensional data: Principal components and clustering</a></td>
+<td align="left"><a href="day7.html">Exploring high-dimensional data: Principal components and clustering</a> <a href="https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide7.html#1">[Slides]</a></td>
 </tr>
 <tr class="even">
 <td align="left">torsdag, 2018-02-01</td>
